Fixed Footer bottom scrollbar

--- a/components/Footer.module.scss
+++ b/components/Footer.module.scss
@@ -124,6 +124,7 @@ form {
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
+  overflow: hidden;
   input,
   textarea {
     resize: none;
